--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -3,7 +3,8 @@ name: Update Submodules
 on:
   push:                             # ← 可选，提交代码时自动触发（调试方便）
   schedule:
-    - cron: "*/5 * * * *"           # 每 5 分钟自动触发
+   # - cron: "*/5 * * * *"           # 每 5 分钟自动触发
+  - cron: "0 16 * * *"  # UTC 时间 16:00 = 北京时间次日 00:00
   workflow_dispatch:                # 手动触发按钮
 
 jobs:
